objects/Collections_Invoice__c.object
<CustomObject>
    <description>Object below Case to map 1:1 with invoices in the GL</description>
    <fields>
        <fullName>Account_Name_from_Acct_Record__c</fullName>
        <description>Helper formula to pull the account name down to the invoice level</description>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Helper formula to pull the account name down to the invoice level</inlineHelpText>
        <label>Account Name from Acct Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Number__c</fullName>
        <inlineHelpText>Auction number for the invoice</inlineHelpText>
        <label>Auction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auction_payment_Method__c</fullName>
        <inlineHelpText>Method the buyer is using to pay - should match AM</inlineHelpText>
        <label>Auction payment Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case the invoices are related to</description>
        <inlineHelpText>Case the invoices are related to</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Collections Invoices</relationshipLabel>
        <relationshipName>Collections_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cleared_Invoice_Reason__c</fullName>
        <inlineHelpText>Cleared = They were are current in QB as of now
Floorplan Approve = floorplan found to be approved 
T/A Check = they were T/A hold and we have a check on file 
Waved Balance =  If rev recovery found that fees had been waived
Accounting Adj = Change QB</inlineHelpText>
        <label>Investigation Findings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cleared in QB</fullName>
                </value>
                <value>
                    <fullName>Floorplan Approved</fullName>
                </value>
                <value>
                    <fullName>T/A with Check at ACV</fullName>
                </value>
                <value>
                    <fullName>Waved Balance Amount</fullName>
                </value>
                <value>
                    <fullName>Accounting Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Auction_Status__c</fullName>
        <description>Current auction status on this invoice given the auction number</description>
        <inlineHelpText>Current auction status on this invoice given the auction number</inlineHelpText>
        <label>Current Auction Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ID_From_Account__c</fullName>
        <description>Helper formula to pull in the dealer ID into the invoice level for reconciliation and reporting.</description>
        <formula>Case__r.Account.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Helper formula to pull in the dealer ID into the invoice level for reconciliation and reporting.</inlineHelpText>
        <label>Dealer ID From Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <inlineHelpText>Date of the invoice from QB</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <inlineHelpText>Due Date from QB</inlineHelpText>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Invoice number from QB</description>
        <externalId>true</externalId>
        <inlineHelpText>Invoice number from QB</inlineHelpText>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Balance__c</fullName>
        <inlineHelpText>Open Balance in QB</inlineHelpText>
        <label>Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>Payment status from AM, should not be altered in SF, not a picklist so it can take any value from AM - should take the status from AM not manually changed unless absolutely necessary</inlineHelpText>
        <label>Payment Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Customer_Name__c</fullName>
        <inlineHelpText>Customer Name from QB</inlineHelpText>
        <label>QB Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this a transport only invoice from QB, A T-Invoice</inlineHelpText>
        <label>T-Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Status__c</fullName>
        <inlineHelpText>From Auction Manager - should not be changed in SF, not a picklist so it can take any value from production</inlineHelpText>
        <label>Title Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>VIN from production give the auction ID</description>
        <inlineHelpText>VIN from production give the auction ID</inlineHelpText>
        <label>VIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Collections Invoice</label>
    <nameField>
        <label>Collections Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>